--- a/app/views/mmm-template.html
+++ b/app/views/mmm-template.html
@@ -1,10 +1,9 @@
 <div data-ng-controller="mmmController">
   <p>Enter numbers you want to use to calculate mean, median, and mode.</p>
-  <input type="text" data-ng-model="results.input" data-ng-change="calculate(input)">
+  <input type="text" data-ng-model="results.input" data-ng-change="calculate(results.input)">
   <ul>
-    <li>Numbers: {{results.input}}</li>
     <li>Mean: {{results.mean}}</li>
-    <li>Median: {{result.median}}</li>
-    <li>Mode: {{result.mode}}</li>
+    <li>Median: {{results.median}}</li>
+    <li>Mode: {{results.mode}}</li>
   </ul>
 </div>
